<resources>
    <string name="app_name">IsotopeCR-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>

    <string name="newperson_hint">Who?</string>
    <string name="newperson_button">Add Person</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_bookappointment">Book Appointment</string>
    <string name="menu_viewappointment">View Appointment</string>

    <string name="newappointment_date_label">Date</string>
    <string name="vehiclespinner_label">Vehicle</string>
    <string name="email_hint">johndoe@email.com</string>
    <string name="servicespinner_label">Service</string>
    <string name="starttime_label">Start time</string>
    <string name="endtime_label">End time?</string>
    <string name="newappointment_date_first">15-04-2021</string>
    <string name="newappointment_button">Book Appointment</string>
    <string name="starttime_first">9:30</string>
    <string name="endtime_first">11:00</string>
    <string name="register_button">Register</string>
    <string name="newevent_hint">Event name?</string>
    <string name="refresh_button">Refresh lists</string>

    <string name="refresh_vehicle">Refresh</string>
    <string name="refresh_service">Refresh</string>

    <string name="name_prompt">Select name</string>
    <string name="name_appointmentview1">View Future Appointments</string>
    <string name="name_appointmentview2">View Past Appointment (including appointments within next 24 hrs)</string>
    <string name="shop_title">Isotope Car Repair Shop</string>
    <string name="shop_intro">Fixing cars since 1974</string>
    <string name="button_contact">ContactUs</string>
    <string name="home_login">Login</string>
    <string name="isotope_repair_shop">Isotope Repair Shop</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="view_appointment">View Appointment</string>
    <string name="sign_hint">or sign up from our website!</string>
    <string name="car_repair_image">CarRepairImage</string>
    <string name="hint_password">password</string>
    <string name="login">Login</string>
    <string name="hint_email">email</string>


</resources>